@@ -1,3 +1,4 @@
+* Add request state on internal shipment
 * Manage same picking/storage and output location
 
 Version 4.2.0 - 2016-11-28
